<resources>
    <string name="app_name">Hotel</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_rooms">Room Types</string>
    <string name="nav_reservations">Reservations</string>
    <string name="nav_guests">Guests</string>
    <string name="nav_employees">Employees</string>
    <string name="backdrop_description">Parallax image</string>
    <string name="nav_employee_stats">Employee Stats</string>

    <!-- Home -->
    <string name="city_state_zip">%1$s, %2$s %3$d</string>
    <string name="hint_website">www.example.com</string>
    <string name="hint_city_state_zip">Somewhere, ST 12345</string>

    <!-- Room Types -->
    <string name="picture">Picture</string>
    <string name="action_learn">Learn More</string>
    <string name="action_book">Book</string>
    <string name="hint_room_type">Room Type</string>
    <string name="hint_description">Description</string>
    <string name="hint_room_number">Room 1234</string>

    <!-- Guests -->
    <string name="hint_name">John H. Doe</string>
    <string name="hint_phone">123-456-7890</string>
    <string name="hint_email">email@example.com</string>

    <!-- Employee -->
    <string name="hint_position">Position</string>
    <string name="hint_demographic">Demographic</string>
    <string name="hint_age">Age</string>
    <string name="hint_salary">Salary</string>

    <!-- Employee Stats -->
    <string name="hint_metric">Metric</string>
    <string name="hint_metric_value">Metric Value</string>

    <!-- Reservations -->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="action_search">Search</string>
    <string name="action_select">Select</string>
    <string name="action_lookup">Lookup</string>
    <string name="lookup_reservation">Lookup Reservation</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="reservation_number">Reservation Number</string>
    <string name="guests">Guests</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>

    <!-- Payment -->
    <string name="cardholder_name">Cardholder Name</string>
    <string name="billing_address">Billing Address</string>
    <string name="billing_city_state_zip">City/State/Zip</string>
    <string name="hint_address">123 Main St.</string>
    <string name="hint_city">City</string>
    <string name="hint_state">ST</string>
    <string name="hint_zipcode">12345</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="card_type">Card Type</string>
    <string name="hint_card_type">VISA</string>
    <string name="hint_card_number">1234123412341234</string>
    <string name="hint_card_expiration">MMYY</string>
    <string name="hint_cvv">123</string>
    <string name="action_submit">Submit</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="room_number">Room Number</string>
    <string name="guest_name">Guest Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="hint_date">MM/DD/YYYY</string>
    <string name="total_cost">Total Cost ($)</string>
    <string name="hint_total_cost">123.45</string>

    <!-- Number of guests -->
    <string-array name="guest_count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
