<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_room_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_type" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reservation_payment_card_type"
            android:hint="@string/hint_card_type"
            android:maxLines="1"
            android:maxLength="18"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardholder_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reservation_payment_cardholder_name"
            android:hint="@string/hint_name"
            android:maxLines="1"
            android:maxLength="25"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reservation_payment_billing_address"
            android:hint="@string/hint_address"
            android:maxLength="30"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_city_state_zip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:id="@+id/reservation_payment_billing_city"
                android:hint="@string/hint_city"
                android:maxLines="1"
                android:maxLength="30"
                android:inputType="text" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:id="@+id/reservation_payment_billing_state"
                android:hint="@string/hint_state"
                android:maxLines="1"
                android:maxLength="2"
                android:inputType="text" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:id="@+id/reservation_payment_billing_zipcode"
                android:hint="@string/hint_zipcode"
                android:maxLines="1"
                android:maxLength="5"
                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reservation_payment_card_number"
            android:hint="@string/hint_card_number"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration_date" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reservation_payment_card_expiration"
            android:hint="@string/hint_card_expiration"
            android:maxLines="1"
            android:maxLength="4"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cvv" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reservation_payment_card_cvv"
            android:hint="@string/hint_cvv"
            android:maxLines="1"
            android:maxLength="3"
            android:inputType="number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_payment_submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textAllCaps="true"
            android:text="@string/action_submit" />

    </LinearLayout>

</android.support.v7.widget.CardView>
