<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_main"
           android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:checked="true"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_destinations"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/nav_destinations"/>
        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/ic_hotel_black_24dp"
            android:title="@string/nav_rooms"/>
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_card_travel_black_24dp"
            android:title="@string/nav_reservations"/>
        <item
            android:id="@+id/nav_guests"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_guests"/>
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/nav_employees"/>
    </group>

</menu>
